# message-oriented-middleware

./: .gitignore  README.md
api_gateway/: .env  Cargo.toml  build.rs
api_gateway/src/: main.rs
api_gateway/src/grpc_client/: grpc_client.rs
docker/: bash.sh  docker-compose.yml  service.sh
grpc_server/: .env  Cargo.toml
grpc_server/migrations/: 20230410030209_user_table.sql
grpc_server/src/: lib.rs  main.rs  queue.rs
grpc_server/src/crud/: connection.rs  user.rs
protos/: protomom.proto
