[package]
name = "api_gateway"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.2"
tonic = "0.8"
prost = "0.11"
lazy_static = "1.4.0"
futures = "0.3"

[build-dependencies]
tonic-build = "0.8"