[package]
name = "grpc_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.8"
prost = "0.11"
lazy_static = "1.4.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.6.3", default-features = false, features = ["runtime-tokio-rustls","macros", "postgres", "offline", "migrate", "uuid", "time", "bigdecimal"] }
uuid = { version = "1.3.0", features = ["v4"] }
password-hash = { version = "0.4.2", features = ["alloc"] }
dotenv = "0.15.0"


[build-dependencies]
tonic-build = "0.8"
